<resources>
    <string name="app_name">Restaurant Paging App</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="create_reservation">Create Reservation</string>
    <string name="party_size">Party Size</string>
    <string name="phone_number">Phone Number</string>
    <string name="party_size_field">Enter Party Size</string>
    <string name="phone_number_field">Enter Phone Number</string>
    <string name="cancel">Cancel</string>
    <string name="make_res">Make Res</string>
    <string name="sort">Sort</string>
    <string name="to_seated">To Seated</string>
    <string name="name">Name</string>
    <string name="name_field">Enter Name</string>
    <string name="notify">Send Text Message</string>
    <string name="message">Your table is ready!</string>

    <string name="empty_field_error">Please enter all information.</string>
    <string name="invalid_phone_error">Please enter a valid phone number.</string>

    <string name="serverAddress">http://akka.d.umn.edu:4532</string>








</resources>
