<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_reservation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.umn.d.restaurantpagingapp.CreateReservationActivity">

    <TextView
        android:text="@string/create_reservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textSize="30sp"
        android:textColor="@color/Black"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="22dp"
        android:layout_marginEnd="22dp" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/Black"
        android:textSize="20sp"
        android:layout_alignBottom="@+id/enterInfoMessage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/party_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:id="@+id/partySizeLabel"
        android:textColor="@color/Black"
        android:textSize="20sp"
        android:layout_below="@+id/nameEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/phoneNumEditTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone_number_field"
        android:layout_below="@+id/phoneNumLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="number|phone"
        android:maxLength="10" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/partySizeEditText"
        android:hint="@string/party_size_field"
        android:layout_below="@+id/partySizeLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nameEditText"
        android:hint="@string/name_field"
        android:layout_below="@+id/nameLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phoneNumLabel"
        android:textColor="@color/Black"
        android:textSize="20sp"
        android:layout_below="@+id/partySizeEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

    <Button
        android:text="@string/create_reservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createReservationButton"
        android:onClick="onClickCreateReservation"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="53dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:id="@+id/enterInfoMessage"
        android:textColor="@color/Red"/>

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancelButton"
        android:onClick="onClickCancel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
